[project]
name = "gluformer"
version = "1.0.0"
description = "GluFormer: A Foundation Model for Continuous Glucose Monitoring"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Guy Lutsker"},
    {name = "Gal Sapir"},
    {name = "Smadar Shilo"},
    {name = "Hagai Rossman"},
    {name = "Eran Segal"},
]

dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "matplotlib==3.9.0",
    "matplotlib-inline==0.1.6",
    "wandb==0.17.3",
    "umap-learn==0.5.5",
    "tqdm==4.66.4",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Guylu/GluFormer"
Paper = "https://www.nature.com/articles/s41586-025-09925-9"
